feat(admin-endpoints): implemented get session stats endpoint
